# hoc

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yaml  create_release.yaml  test.yaml
config/cloud-init/: network_config.yaml  user_data.yaml
config/helm/: Chart.tmpl.yaml
config/scripts/: longhorn_add_disk.py  shutdown-node.sh
config/ssh/: 00-hoc.conf
container/: Dockerfile
container/helm/hoc-service/: Chart.yaml  values.yaml
container/helm/hoc-service/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deprecated/hoc-core/: Cargo.toml
deprecated/hoc-core/src/: lib.rs  procedure.rs
deprecated/hoc-core/src/process/: exec.rs  mod.rs  ssh.rs
deprecated/hoc-log/src/: prefix.rs  wrapping.rs
deprecated/hoc-log/src/log/: hidden_input.rs  prompt.rs  status.rs  stream.rs
deprecated/hoc-macros/: Cargo.toml
deprecated/hoc-macros/src/: cmd.rs  define_commands.rs  doc_status.rs  procedure.rs
deprecated/hocfile/: Cargo.toml
deprecated/hocfile/src/: tree.rs
deprecated/hocfile/src/deserialize/: mod.rs
deprecated/hocfile/src/exec/: parse.rs
docker/: Dockerfile
hoc/: Cargo.toml
hoc-core/: Cargo.toml
hoc-core/src/: lib.rs  procedure.rs
hoc-core/src/context/: mod.rs
hoc-core/src/context/history/: item.rs  mod.rs
hoc-core/src/context/kv/: file.rs  mod.rs
hoc-core/src/process/: exec.rs  mod.rs  ssh.rs
hoc-log/: Cargo.toml
hoc-log/src/: lib.rs
hoc-log/src/log/: choose.rs  hidden_input.rs  mod.rs
hoc-macros/: Cargo.toml
hoc-macros/src/: cmd.rs  define_commands.rs  lib.rs  procedure.rs  procedure_state.rs
hoc/config/: network-config  user-data
hoc/config/consul/: vault-service-policy.hcl
hoc/config/vault/: cert.conf  csr.conf
hoc/src/: cidr.rs  context.rs  error.rs  file_ref.rs  init.rs  ledger.rs  logger.rs  macros.rs  main.rs  prelude.rs  procedure.rs  prompt.rs  runner.rs  util.rs
hoc/src/action/: debug.rs  init.rs  macros.rs  mod.rs
hoc/src/action/run/: debug.rs  init.rs  mod.rs
hoc/src/action/run/sd_card/: prepare.rs
hoc/src/command/: configure.rs  create_user.rs  deploy_node.rs  download_image.rs  flash.rs  init.rs  macros.rs  mod.rs  prepare_cluster.rs  prepare_sd_card.rs
hoc/src/command/configure/: change_default_user.rs  get_host.rs  local_endpoints.rs  mod.rs  node_settings.rs  util.rs
hoc/src/command/create_user/: mod.rs
hoc/src/command/download_os_image/: mod.rs
hoc/src/command/flash/: decompress.rs  download.rs  flash.rs  mod.rs  modify.rs  util.rs
hoc/src/command/run/: init.rs
hoc/src/command/run/debug/: prompt.rs
hoc/src/command/run/sd_card/: prepare.rs
hoc/src/command/util/: cidr.rs  disk.rs  image.rs  mod.rs  os.rs  ssh.rs
hoc/src/context/: cache.rs  dir_state.rs  files.rs  key.rs  kv.rs  mod.rs  temp.rs  util.rs
hoc/src/context/fs/: cache.rs  files.rs  mod.rs  temp.rs
hoc/src/log/: logger.rs  mod.rs
hoc/src/log/progress/: mod.rs
hoc/src/log/progress/render/: animation.rs  mod.rs  term.rs  view.rs
hoc/src/logger/: mod.rs
hoc/src/logger/render/: mod.rs
hoc/src/subcommand/: macros.rs  mod.rs
hoc/src/subcommand/run/: init.rs
hoc/src/subcommand/run/sd_card/: prepare.rs
hocfile/src/: lib.rs
hocfile/src/deserialize/: validate.rs
hocfile/src/exec/: mod.rs
hoclib/: Cargo.toml
hoclib/src/: error.rs  lib.rs  procedure.rs
hoclib/src/context/: dir_state.rs  mod.rs  step_history.rs  steps.rs  temp_path.rs
hoclib/src/context/history/: item.rs  mod.rs
hoclib/src/context/kv/: mod.rs
hoclib/src/dir_state/: dir_comp.rs  mod.rs
hoclib/src/process/: mod.rs  ssh.rs
hoclog/: Cargo.toml
hoclog/src/: context.rs  lib.rs  log.rs  status.rs  stream.rs  styling.rs  wrapping.rs
hoclog/src/log/: hidden_input.rs  mod.rs  status.rs
hocproc/: Cargo.toml
hocproc/src/: lib.rs
scripts/: bumb_version.py  bump_version.py  changelog_body.py  get_changelog.py  get_target.py  get_version.py  init.sh
src/: build.rs  cidr.rs  context.rs  file.rs  ledger.rs  logger.rs  macros.rs  main.rs  parse.rs  prelude.rs  process.rs  prompt.rs  runner.rs  temp.rs  util.rs
src/command/: macros.rs  mod.rs  util.rs
src/command/run/: deploy.rs  init.rs  mod.rs  upgrade.rs  version.rs
src/command/run/cluster/: deploy.rs
src/configure/: mod.rs  parse.rs
src/configure/shell/: add_user.fmt.sh  add_user.sh.fmt  configure_cron_jobs.sh  configure_firewall.sh  configure_hostname.sh  configure_ssh.sh.fmt  configure_ssh_key_based_authentication.sh  delete_pi_user.fmt.sh  delete_pi_user.sh  delete_pi_user.sh.fmt  get_debian_package_urls.fmt.sh  get_debian_package_urls.sh.fmt  get_installed_debian_packages.fmt.sh  get_installed_debian_packages.sh.fmt  get_installed_rust_crates.fmt.sh  get_installed_rust_crates.sh.fmt  install_apt_package.sh.fmt  install_dependencies.sh  install_rust_package.sh.fmt  promote_debian_package.fmt.sh  promote_debian_package.sh.fmt  reboot.fmt.sh  reboot.sh  reboot.sh.fmt
src/context/: key.rs  kv.rs  mod.rs  util.rs
src/context/fs/: cache.rs  files.rs  mod.rs  temp.rs
src/deploy/: mod.rs
src/flash/: mod.rs  parse.rs
src/hoc/: Cargo.toml  Hocfile.default.yaml  build.rs
src/hoc/src/: build.rs  context.rs  main.rs
src/hoc/src/configure/: mod.rs  parse.rs
src/hoc/src/configure/shell/: get_debian_package_urls.fmt.sh  print_file_output.fmt.sh
src/hoc/src/configure/shell/configure/: docker.fmt.sh  fish.fmt.sh  flannel.fmt.sh  k8s_copy_config_to_temp.fmt.sh  k8s_source.fmt.sh  kernel.fmt.sh  raspi_config.fmt.sh  ssh.fmt.sh  swap.fmt.sh
src/hoc/src/configure/shell/install/: debian_packages.fmt.sh  rust.fmt.sh
src/hoc/src/configure/shell/test_successful/: k8s_cluster.fmt.sh
src/hoc/src/deploy/: mod.rs
src/hoc/src/flash/: mod.rs
src/hoc/src/publish/: mod.rs
src/hoc/src/service/: ci.rs  mod.rs
src/hocfile/: Cargo.toml
src/hocfile/src/: lib.rs
src/hoclog/: Cargo.toml
src/hoclog/src/: lib.rs  macros.rs
src/log/: logger.rs  macros.rs  mod.rs  wrapping.rs
src/log/progress/: mod.rs
src/publish/: mod.rs
src/service/: ci.rs  mod.rs
(+43 files in other folders)
