[package]
name = "homepi-hosting-tools"
version = "0.1.0"
authors = ["Hampus Lidin <hampuslidin@gmail.com>"]
edition = "2018"

[[bin]]
name = "hoc"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0"
bollard = { git = "https://github.com/fussybeaver/bollard.git", rev = "7fd2ea7b67f627d283902be2aea630c3202a81fd" }
console = "0.11"
dialoguer = "0.6"
futures = "0.3"
git2 = "0.13"
heck = "0.3"
indexmap = "1.6.0"
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_19"] }
kube = { git = "https://github.com/clux/kube-rs.git", rev = "f49fcc4b64ca53091efe15f570e38c6ab3789567" }
kube-runtime = { git = "https://github.com/clux/kube-rs.git", rev = "f49fcc4b64ca53091efe15f570e38c6ab3789567" }
lazy_static = "1.4"
nom = "5.1"
num_enum = "0.5"
plist = "1.0"
rand = "0.7"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
ssh2 = "0.8"
structopt = "0.3"
strum = "0.19"
strum_macros = "0.19"
tar = "0.4.30"
tempfile = "3.1"
tokio = { version = "0.2", features = ["macros"] }
url = "2.1.1"
xz2 = { version = "0.1", features = ["tokio"] }
zip = "0.5"
