[package]
name = "hoc"
version = "0.0.9"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
clap = { version = "4.1.4", features = ["derive"] }
crossterm = "0.25.0"
fehler = "1.0.0"
heck = "0.4.0"
indexmap = { version = "1.9.2", features = ["serde"] }
inquire = { git = "https://github.com/hampuslidin/inquire.git", branch = "feature/global-prefix" }
lazy-regex = "2.4.1"
log_facade = { package = "log", version = "0.4.17", features = ["std"] }
once_cell = "1.17.0"
osshkeys = "0.6.2"
plist = "1.4.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
scopeguard = "1.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
spin_sleep = "1.1.1"
ssh2 = "0.9.4"
thiserror = "1.0.38"
tinytemplate = "1.2.1"
xz2 = "0.1.7"
zip = "0.6.3"
