[package]
name = "hoc"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
crossterm = "0.25.0"
fehler = "1.0.0"
indexmap = { version = "1.9.1", features = ["serde"] }
inquire = "0.3.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.13"
spin_sleep = "1.1.1"
thiserror = "1.0.35"
