[package]
name = "hoc"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive"] }
crossterm = "0.25.0"
fehler = "1.0.0"
futures = "0.3.24"
heck = "0.4.0"
indexmap = { version = "1.9.1", features = ["serde"] }
inquire = "0.3.0"
log = { version = "0.4.17", features = ["std"] }
once_cell = "1.15.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.6.0"
scopeguard = "1.1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
spin_sleep = "1.1.1"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.35"
