[package]
name = "hoc"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.58"
chrono = "0.4.22"
clap = { version = "4.0.27", features = ["derive"] }
crossterm = "0.25.0"
fehler = "1.0.0"
futures = "0.3.25"
heck = "0.4.0"
indexmap = { version = "1.9.1", features = ["serde"] }
inquire = { git = "https://github.com/hampuslidin/inquire.git", branch = "feature/global-prefix" }
log_facade = { package = "log", version = "0.4.17", features = ["std"] }
once_cell = "1.16.0"
osshkeys = "0.6.2"
plist = "1.3.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.7.0"
reqwest = "0.11.13"
scopeguard = "1.1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.13"
spin_sleep = "1.1.1"
thiserror = "1.0.35"
tokio = { version = "1.22.0", features = ["fs", "io-util", "process", "macros", "rt-multi-thread"] }
xz2 = { version = "0.1.7" }
