[package]
name = "hoclib"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.2.1"
ssh2 = "0.9.3"
colored = "2.0.0"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["blocking"] }
serde_json = "1.0.67"
serde_yaml = "0.8.21"
strum = { version = "0.21.0", features = ["derive"] }
thiserror = "1.0.29"

hoclog = { path = "../hoclog" }
