[package]
name = "hoclib"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.3.1"
colored = "2.0.0"
ctrlc = "3.2.1"
reqwest = { version = "0.11.4", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_yaml = "0.8.21"
ssh2 = "0.9.3"
strum = { version = "0.21.0", features = ["derive"] }
thiserror = "1.0.29"

hoclog = { path = "../hoclog" }
