[package]
name = "hosting-on-command"
version = "0.1.0"
authors = ["Hampus Lidin <hampuslidin@gmail.com>"]
edition = "2018"

[[bin]]
name = "hoc"
path = "./src/main.rs"

[dependencies]
anyhow = "1.0"
bollard = { git = "https://github.com/fussybeaver/bollard.git", rev = "7fd2ea7b67f627d283902be2aea630c3202a81fd" }
clap = "2.33"
errno = "0.2"
futures = "0.3"
git2 = "0.13"
heck = "0.3"
hocfile = { path = "../hocfile" }
hoclog = { path = "../hoclog" }
indexmap = "1.6"
k8s-openapi = { version = "0.10", default-features = false, features = ["v1_19"] }
kube = { git = "https://github.com/clux/kube-rs.git", rev = "f49fcc4b64ca53091efe15f570e38c6ab3789567" }
lazy_static = "1.4"
libc = "0.2"
nom = "7.0.0"
num_enum = "0.5"
plist = "1.0"
rand = "0.7"
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
ssh2 = "0.8"
structopt = "0.3"
strum = "0.20"
strum_macros = "0.20"
tar = "0.4"
tempfile = "3.1"
tera = "1.6"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
toml = "0.5"
url = "2.1"
xz2 = { version = "0.1", features = ["tokio"] }
zip = "0.5"

[build-dependencies]
hocfile = { path = "../hocfile" }
serde_yaml = "0.8"
